--- a/Express/package.json
+++ b/Express/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.0",
     "joi": "^17.13.3",
-    "nodemon": "^3.1.7"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.3",
+    "nodemon": "^3.1.7",
+    "validator": "^13.12.0"
   }
 }
